force-app/main/default/objects/cancel_request__c/cancel_request__c.object-meta.xml
<CustomObject>
    <label>キャンセル依頼</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>キャンセル依頼</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>