force-app/main/default/objects/cancel_request__c/fields/accounting_memo__c.field-meta.xml
<CustomField>
    <fullName>accounting_memo__c</fullName>
    <label>経理メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>