force-app/main/default/objects/cancel_request__c/fields/accounting_task__c.field-meta.xml
<CustomField>
    <fullName>accounting_task__c</fullName>
    <label>経理タスク</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>未完了</fullName>
            </value>
            <value>
                <fullName>対象外</fullName>
            </value>
            <value>
                <fullName>---</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>