force-app/main/default/objects/cancel_request__c/fields/approver__c.field-meta.xml
<CustomField>
    <fullName>approver__c</fullName>
    <description>その他や請求・取引内容変更のため不要があるため、参照項目は不可</description>
    <label>承認者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>金井 宏之</fullName>
            </value>
            <value>
                <fullName>熊谷 裕史</fullName>
            </value>
            <value>
                <fullName>村竹 顕</fullName>
            </value>
            <value>
                <fullName>山田 裕太</fullName>
            </value>
            <value>
                <fullName>山本 雄大</fullName>
            </value>
            <value>
                <fullName>橘​ 亮太</fullName>
            </value>
            <value>
                <fullName>南 信次</fullName>
            </value>
            <value>
                <fullName>請求・取引内容変更のため不要</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>