force-app/main/default/objects/cancel_request__c/fields/approver_irregular__c.field-meta.xml
<CustomField>
    <fullName>approver_irregular__c</fullName>
    <label>イレギュラー対応の承認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>