force-app/main/default/objects/cancel_request__c/fields/cancel_detail__c.field-meta.xml
<CustomField>
    <fullName>cancel_detail__c</fullName>
    <label>キャンセル詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>