force-app/main/default/objects/cancel_request__c/fields/cancel_reason__c.field-meta.xml
<CustomField>
    <fullName>cancel_reason__c</fullName>
    <label>キャンセル理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入金期限切れによるキャンセル</fullName>
            </value>
            <value>
                <fullName>クレーム（データ相違）</fullName>
            </value>
            <value>
                <fullName>入札間違い</fullName>
            </value>
            <value>
                <fullName>キャンセル処理を伴う請求変更</fullName>
            </value>
            <value>
                <fullName>24時間以内キャンセル</fullName>
            </value>
            <value>
                <fullName>ヤード内盗難</fullName>
            </value>
            <value>
                <fullName>陸送中の事故など</fullName>
            </value>
            <value>
                <fullName>誤売却</fullName>
            </value>
            <value>
                <fullName>会員都合（バックの顧客がいなくなったなど）</fullName>
            </value>
            <value>
                <fullName>請求・取引内容変更のためのキャンセル</fullName>
            </value>
            <value>
                <fullName>ABT案件（24時間以内キャンセル）</fullName>
            </value>
            <value>
                <fullName>売り先変更（代行オークション）</fullName>
            </value>
            <value>
                <fullName>長期未入金による強制キャンセル</fullName>
            </value>
            <value>
                <fullName>締日後の請求</fullName>
                <isActive>false</isActive>
                <label>締日後の請求</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>