force-app/main/default/objects/cancel_request__c/fields/Cansel_phase__c.field-meta.xml
<CustomField>
    <fullName>Cansel_phase__c</fullName>
    <label>キャンセルフェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受付</fullName>
            </value>
            <value>
                <fullName>各部署対応中</fullName>
            </value>
            <value>
                <fullName>経理返金対応中</fullName>
            </value>
            <value>
                <fullName>業務課再出品チェック待ち</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>キャンセル自体を撤回（購入を継続するため）</fullName>
            </value>
            <value>
                <fullName>誤依頼のため対応不要（重複して依頼してしまった等）</fullName>
            </value>
            <value>
                <fullName>書類返送待ち</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>