force-app/main/default/objects/cancel_request__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>依頼カテゴリ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>