force-app/main/default/objects/cancel_request__c/fields/change_get_pic__c.field-meta.xml
<CustomField>
    <fullName>change_get_pic__c</fullName>
    <label>新ロット担当者変更</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>