force-app/main/default/objects/cancel_request__c/fields/Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number__c</fullName>
    <label>車台番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>