force-app/main/default/objects/cancel_request__c/fields/Complaints_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Complaints_Responsibility__c</fullName>
    <label>クレーム責任の帰属</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仕入営業</fullName>
            </value>
            <value>
                <fullName>データ取得者</fullName>
            </value>
            <value>
                <fullName>出品チーム</fullName>
            </value>
            <value>
                <fullName>陸送業者</fullName>
            </value>
            <value>
                <fullName>会員</fullName>
            </value>
            <value>
                <fullName>販売営業</fullName>
            </value>
            <value>
                <fullName>書類管理</fullName>
            </value>
            <value>
                <fullName>EU（エンドユーザー</fullName>
            </value>
            <value>
                <fullName>船会社</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>EU（エンドユーザー）</fullName>
                <isActive>false</isActive>
                <label>EU（エンドユーザー）</label>
            </value>
            <value>
                <fullName>仕入れ営業</fullName>
                <isActive>false</isActive>
                <label>仕入れ営業</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>