force-app/main/default/objects/cancel_request__c/fields/ComplaintsCorrespondenceDivision__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsCorrespondenceDivision__c</fullName>
    <label>クレーム対応区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ノークレーム</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
            <value>
                <fullName>キャンセル＋費用負担</fullName>
            </value>
            <value>
                <fullName>値引き</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>