force-app/main/default/objects/cancel_request__c/fields/ComplaintsReceptionDate__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsReceptionDate__c</fullName>
    <label>クレーム受付日</label>
    <type>Date</type>
</CustomField>