force-app/main/default/objects/cancel_request__c/fields/ComplaintsResponsibility_Manager__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsResponsibility_Manager__c</fullName>
    <description>間違えてテキストエリアで項目を作成してしまったため。※フローで使用されているため削除不可。</description>
    <label>クレーム責任の担当者（削除予定）</label>
    <type>TextArea</type>
</CustomField>