force-app/main/default/objects/cancel_request__c/fields/ComplaintsResponsibility_Manager_txt__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsResponsibility_Manager_txt__c</fullName>
    <label>クレーム責任の担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>