force-app/main/default/objects/cancel_request__c/fields/create_new_lot__c.field-meta.xml
<CustomField>
    <fullName>create_new_lot__c</fullName>
    <label>新ロットの作成</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>