force-app/main/default/objects/cancel_request__c/fields/document_change__c.field-meta.xml
<CustomField>
    <fullName>document_change__c</fullName>
    <label>書類対応依頼</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>輸抹戻し必要</fullName>
            </value>
            <value>
                <fullName>輸抹していない</fullName>
            </value>
            <value>
                <fullName>対象外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>