force-app/main/default/objects/cancel_request__c/fields/document_memo__c.field-meta.xml
<CustomField>
    <fullName>document_memo__c</fullName>
    <label>書類管理メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>