force-app/main/default/objects/cancel_request__c/fields/Emergency_memo__c.field-meta.xml
<CustomField>
    <fullName>Emergency_memo__c</fullName>
    <description>参照項目がうまく保存できていなかったときのための管理番号等Name項目を控えておく場所。</description>
    <label>参照項目メモ（非表示）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>