force-app/main/default/objects/cancel_request__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <description>キャンセル依頼時に業務課が使用</description>
    <formula>kanrinum1__r.Expenses__c</formula>
    <inlineHelpText>関連車両1に紐づく諸経費</inlineHelpText>
    <label>諸経費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>