force-app/main/default/objects/cancel_request__c/fields/input_other__c.field-meta.xml
<CustomField>
    <fullName>input_other__c</fullName>
    <label>承認者がその他の場合</label>
    <length>255</length>
    <type>Text</type>
</CustomField>