force-app/main/default/objects/cancel_request__c/fields/invoice_info2__c.field-meta.xml
<CustomField>
    <fullName>invoice_info2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する請求情報2</label>
    <referenceTo>invoice_info__c</referenceTo>
    <relationshipName>invoice_info2_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>