force-app/main/default/objects/cancel_request__c/fields/invoice_info3__c.field-meta.xml
<CustomField>
    <fullName>invoice_info3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する請求情報3</label>
    <referenceTo>invoice_info__c</referenceTo>
    <relationshipName>invoice_info3_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>