force-app/main/default/objects/cancel_request__c/fields/irregular__c.field-meta.xml
<CustomField>
    <fullName>irregular__c</fullName>
    <label>イレギュラー対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>書類返送前返金</fullName>
            </value>
            <value>
                <fullName>イレギュラーではない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>