force-app/main/default/objects/cancel_request__c/fields/irregular_reason__c.field-meta.xml
<CustomField>
    <fullName>irregular_reason__c</fullName>
    <label>イレギュラー対応の理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>