force-app/main/default/objects/cancel_request__c/fields/kanrinum1__c.field-meta.xml
<CustomField>
    <fullName>kanrinum1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>オークション出品データ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>キャンセル依頼 (関連車両1)</relationshipLabel>
    <relationshipName>kanrinum1_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>