force-app/main/default/objects/cancel_request__c/fields/kanrinum2__c.field-meta.xml
<CustomField>
    <fullName>kanrinum2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連車両2</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipName>kanrinum2_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>