force-app/main/default/objects/cancel_request__c/fields/kanrinum3__c.field-meta.xml
<CustomField>
    <fullName>kanrinum3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連車両3</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipName>kanrinum3_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>