force-app/main/default/objects/cancel_request__c/fields/kotei_memo__c.field-meta.xml
<CustomField>
    <fullName>kotei_memo__c</fullName>
    <label>固定メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>