force-app/main/default/objects/cancel_request__c/fields/limit_date__c.field-meta.xml
<CustomField>
    <fullName>limit_date__c</fullName>
    <label>対応期限</label>
    <type>DateTime</type>
</CustomField>