force-app/main/default/objects/cancel_request__c/fields/logistics_company__c.field-meta.xml
<CustomField>
    <fullName>logistics_company__c</fullName>
    <label>陸送業者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>