force-app/main/default/objects/cancel_request__c/fields/logistics_memo__c.field-meta.xml
<CustomField>
    <fullName>logistics_memo__c</fullName>
    <label>物流メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>