force-app/main/default/objects/cancel_request__c/fields/logistics_status__c.field-meta.xml
<CustomField>
    <fullName>logistics_status__c</fullName>
    <label>陸送状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>陸送オーダー済み</fullName>
            </value>
            <value>
                <fullName>陸送オーダーを依頼していない</fullName>
            </value>
            <value>
                <fullName>対象外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>