force-app/main/default/objects/cancel_request__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <description>キャンセルフロー用</description>
    <label>ロット番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>