force-app/main/default/objects/cancel_request__c/fields/member__c.field-meta.xml
<CustomField>
    <fullName>member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売会員情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipName>member_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>