force-app/main/default/objects/cancel_request__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>依頼内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>