force-app/main/default/objects/cancel_request__c/fields/memo_support__c.field-meta.xml
<CustomField>
    <fullName>memo_support__c</fullName>
    <label>業務課メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>