force-app/main/default/objects/cancel_request__c/fields/new_lot__c.field-meta.xml
<CustomField>
    <fullName>new_lot__c</fullName>
    <label>新ロット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>