force-app/main/default/objects/cancel_request__c/fields/new_lot_pic__c.field-meta.xml
<CustomField>
    <fullName>new_lot_pic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新ロット担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>new_lot_pic</relationshipName>
    <type>Lookup</type>
</CustomField>