force-app/main/default/objects/cancel_request__c/fields/next_dairi_or_hanamaru__c.field-meta.xml
<CustomField>
    <fullName>next_dairi_or_hanamaru__c</fullName>
    <label>代理出品　再出品方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>代理出品として再出品</fullName>
            </value>
            <value>
                <fullName>はなまるとして再出品</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>