force-app/main/default/objects/cancel_request__c/fields/oneprice1__c.field-meta.xml
<CustomField>
    <fullName>oneprice1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ワンプライス車両</label>
    <referenceTo>ss_offer_info__c</referenceTo>
    <relationshipLabel>キャンセル依頼 (関連ワンプラ車両1)</relationshipLabel>
    <relationshipName>oneprice1_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>