force-app/main/default/objects/cancel_request__c/fields/oneprice2__c.field-meta.xml
<CustomField>
    <fullName>oneprice2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連ワンプラ車両2</label>
    <referenceTo>ss_offer_info__c</referenceTo>
    <relationshipName>oneprice2_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>