force-app/main/default/objects/cancel_request__c/fields/oneprice3__c.field-meta.xml
<CustomField>
    <fullName>oneprice3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連ワンプラ車両3</label>
    <referenceTo>ss_offer_info__c</referenceTo>
    <relationshipName>oneprice3_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>