force-app/main/default/objects/cancel_request__c/fields/order_info1__c.field-meta.xml
<CustomField>
    <fullName>order_info1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>陸送情報1</label>
    <referenceTo>order_info__c</referenceTo>
    <relationshipName>order_info_oya_1</relationshipName>
    <type>Lookup</type>
</CustomField>