force-app/main/default/objects/cancel_request__c/fields/order_info2__c.field-meta.xml
<CustomField>
    <fullName>order_info2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>陸送情報2</label>
    <referenceTo>order_info__c</referenceTo>
    <relationshipName>order_info_oya_2</relationshipName>
    <type>Lookup</type>
</CustomField>