force-app/main/default/objects/cancel_request__c/fields/order_info3__c.field-meta.xml
<CustomField>
    <fullName>order_info3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>陸送情報3</label>
    <referenceTo>order_info__c</referenceTo>
    <relationshipName>order_info_oya_3</relationshipName>
    <type>Lookup</type>
</CustomField>