force-app/main/default/objects/cancel_request__c/fields/other_yard__c.field-meta.xml
<CustomField>
    <fullName>other_yard__c</fullName>
    <label>その他ヤード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>