force-app/main/default/objects/cancel_request__c/fields/persent_auc__c.field-meta.xml
<CustomField>
    <fullName>persent_auc__c</fullName>
    <label>%オク値段提示</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>値段提示前</fullName>
            </value>
            <value>
                <fullName>値段提示済み</fullName>
            </value>
            <value>
                <fullName>%オクではない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>