force-app/main/default/objects/cancel_request__c/fields/phase__c.field-meta.xml
<CustomField>
    <fullName>phase__c</fullName>
    <label>フェーズ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>