force-app/main/default/objects/cancel_request__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>キャンセル依頼</relationshipLabel>
    <relationshipName>PurchaseOpportunity_for_cancel_request</relationshipName>
    <type>Lookup</type>
</CustomField>