force-app/main/default/objects/cancel_request__c/fields/re_bit_ok__c.field-meta.xml
<CustomField>
    <fullName>re_bit_ok__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再出品完了</label>
    <type>Checkbox</type>
</CustomField>