force-app/main/default/objects/cancel_request__c/fields/re_deta__c.field-meta.xml
<CustomField>
    <fullName>re_deta__c</fullName>
    <label>データ再取得</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>再取得する</fullName>
            </value>
            <value>
                <fullName>再取得しない</fullName>
            </value>
            <value>
                <fullName>対象外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>