force-app/main/default/objects/cancel_request__c/fields/refund_method__c.field-meta.xml
<CustomField>
    <fullName>refund_method__c</fullName>
    <label>返金方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>預り金（Deposit）</fullName>
            </value>
            <value>
                <fullName>振込（Transfer）</fullName>
            </value>
            <value>
                <fullName>未入金</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>