force-app/main/default/objects/cancel_request__c/fields/Representative_at_Sale__c.field-meta.xml
<CustomField>
    <fullName>Representative_at_Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Representative_at_Sale</relationshipName>
    <type>Lookup</type>
</CustomField>