force-app/main/default/objects/cancel_request__c/fields/request_detail__c.field-meta.xml
<CustomField>
    <fullName>request_detail__c</fullName>
    <label>依頼者詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>