force-app/main/default/objects/cancel_request__c/fields/request_memo__c.field-meta.xml
<CustomField>
    <fullName>request_memo__c</fullName>
    <label>依頼時メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>