force-app/main/default/objects/cancel_request__c/fields/request_notice_for_sales__c.field-meta.xml
<CustomField>
    <fullName>request_notice_for_sales__c</fullName>
    <label>仕入れ営業への連絡</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>通知する</fullName>
            </value>
            <value>
                <fullName>通知しない（入力のみ）</fullName>
            </value>
            <value>
                <fullName>通知しない（入力不要）</fullName>
            </value>
            <value>
                <fullName>紐付ける買取商談なし</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
                <isActive>false</isActive>
                <label>不要</label>
            </value>
            <value>
                <fullName>必要</fullName>
                <isActive>false</isActive>
                <label>必要</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>