force-app/main/default/objects/cancel_request__c/fields/sale_instructions__c.field-meta.xml
<CustomField>
    <fullName>sale_instructions__c</fullName>
    <label>売却指示</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>売却指示済み</fullName>
            </value>
            <value>
                <fullName>売却指示していない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>