force-app/main/default/objects/cancel_request__c/fields/SaleDate__c.field-meta.xml
<CustomField>
    <fullName>SaleDate__c</fullName>
    <label>車両売却日</label>
    <type>Date</type>
</CustomField>