force-app/main/default/objects/cancel_request__c/fields/sales_category__c.field-meta.xml
<CustomField>
    <fullName>sales_category__c</fullName>
    <label>売却エリア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>