force-app/main/default/objects/cancel_request__c/fields/sales_memo__c.field-meta.xml
<CustomField>
    <fullName>sales_memo__c</fullName>
    <label>販売メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>