force-app/main/default/objects/cancel_request__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <label>代理出品取引先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>