force-app/main/default/objects/cancel_request__c/fields/Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price__c</fullName>
    <description>キャンセル依頼時に業務課が使用</description>
    <formula>kanrinum1__r.Selling_Price__c</formula>
    <inlineHelpText>関連車両1に紐づく売却金額</inlineHelpText>
    <label>売却金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>