force-app/main/default/objects/cancel_request__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未完了</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>対応不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>