force-app/main/default/objects/cancel_request__c/fields/sub_category__c.field-meta.xml
<CustomField>
    <fullName>sub_category__c</fullName>
    <label>サブカテゴリ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>