force-app/main/default/objects/cancel_request__c/fields/taiou_pic__c.field-meta.xml
<CustomField>
    <fullName>taiou_pic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>依頼者（依頼を投げた人）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>taiou_pic_task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>