force-app/main/default/objects/cancel_request__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>件名（その他の場合）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>