force-app/main/default/objects/cancel_request__c/fields/torihiki_domestic_overseas__c.field-meta.xml
<CustomField>
    <fullName>torihiki_domestic_overseas__c</fullName>
    <label>取引区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>国内取引</fullName>
            </value>
            <value>
                <fullName>海外取引</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>