force-app/main/default/objects/cancel_request__c/fields/torihiki_kbn__c.field-meta.xml
<CustomField>
    <fullName>torihiki_kbn__c</fullName>
    <label>取引区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>