force-app/main/default/objects/cancel_request__c/fields/trading_memo__c.field-meta.xml
<CustomField>
    <fullName>trading_memo__c</fullName>
    <label>貿易メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>